# dates-generator

./: .gitignore  README.md  STUDY_GUIDE.md  environment.yml  evaluation_summary.csv  notebook.ipynb  notebookd6a04e3f3c.ipynb  pyproject.toml  requirements.txt
model/: data.py  evaluation.py  metrics.py  predict.py  tokenizer.py  train.py  training.py
model/models/: acgan.py  cond_embed.py  cvae.py  maskgit.py  mdlm.py
model/weights_legacy/: ar.pt  cgan.pt  cvae.pt  diffusion.pt
report/: Assignment_2_mostafa_202201132.md
scripts/: run_cfg_ablation.py  run_final_eval.py
tests/: conftest.py  test_acgan.py  test_cond_embed.py  test_cvae.py  test_data.py  test_evaluation.py  test_maskgit.py  test_mdlm.py  test_metrics.py  test_predict.py  test_tokenizer.py  test_training_smoke.py
