[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dates-generator"
version = "0.1.0"
description = "Conditional date generation -- research-backed 4-model implementation."
requires-python = ">=3.10"

[tool.setuptools]
packages = ["model", "model.models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
